--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 hr{
     border-style:none; 
     background-color:white;
-    height:2px;
+    height:0.125em;
 }
 
 h1{
@@ -14,27 +14,27 @@ h1{
 }
 
 .top-container{
-    padding-top: 150px;
+    padding-top: 9.375em;
     background-color: powderblue;
     margin: 0;
-    height: 406;
+    height: 32em;
 }
 
 .middle-container{
     background-color: white;
     margin: 0;
-    height: 800;
+    height: 55em;
 }
 
-.smiddle-container{
+.Members{
     background-color: Cornsilk;
     margin: 0;
-    height: 700;
+    height: 43.750em;
 }
 
 .bottom-container{
-    padding-top: 50;
-    height: 250;
+    padding-top: 3.125em;
+    height: 15.625em;
     margin: 0;
     background: gray;
 }
@@ -42,11 +42,11 @@ h1{
 .ssmiddle-container{
     background-color: Cornsilk;
     margin: 0;
-    height: 410;
+    height: 25.5em;
 }
 
 #heading{
-    font-size: 150px;
+    font-size: 10em;
     font-family:cursive;
     position: relative;
     bottom: 50;
@@ -55,27 +55,26 @@ h1{
 #first-rule{
     border-style: none;
     background-color: white;
-    height: 1.5;
+    height: 0.094em;
     width: 500;
     position: relative;
-    bottom: 45;
+    bottom: 2.813em;
 }
 
 #paragraph-one{
-    padding-top: 40;
-    font-size: 20;
+    padding-top: 2.500em;
+    font-size: 1.250em;
     font-family: cursive;
     position: relative;
-    bottom: 50;
+    bottom: 3.125em;
 }
 
 .Mlion{
     font-size: 60; 
     color:#20B2AA;
     text-align: center;
-    position: relative;
-    top:65;
     font-family: monospace;
+    padding-top: 10%;
 }
 
 #Profile{
@@ -83,42 +82,38 @@ h1{
     height: 2;
     border-style:none; 
     background-color:#EAEAEA;
-    position: relative;
-    top: 140;
 }
 
 #team{
     color:gray;
     text-align: center;
-    position: relative;
     font-size: 1.4em;
-    top: 50;   
     font-family: cursive;
+    padding-top: 2%;
 }
 
 #f-table{
     text-align: center;
     position: relative;
-    left: 100;
-    top: 165;
+    left: 6em;
+    top: 2em;
     font-family: sans-serif;
 }
 
 .paragraph{
-    text-align:center;
+    font-size: 100%;
     font-family: cursive;
+    line-height: 3.5;
+    text-align: center;
 }
 
 #group-img{
-    padding: 50 50 0 50;
-    width: 500;
-    height: 400;
-    position: absolute;
-    right: 100;
-    top: 800;
+    padding: 6em 1em 10 11em;
+    width: 31.250em;
+    height: 25em;
 }
 
-.Members{
+#heading3{
     padding-top: 50;
     font-size: 100;
     text-align: center;
@@ -133,13 +128,16 @@ h1{
     width: 500;
 }
 
-.s-table{
-    padding: 50 30 0 30;
+/* previous-name: s-table row */
+.member-box{ 
+    padding: 3.125em 1.875em 4em 1.875em;
 }
 
-.b-table{
+/*previous name: b-table*/
+.member-name{
     font-size: 2.25em;
     text-align: center;
+    padding-top:1em;
 }
 
 #Contact{
@@ -147,17 +145,19 @@ h1{
     text-align: center;
     font-size: 4em;
     font-family:monospace;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 .last-table{
-    margin: 0;
-    padding: 80 20 30 20;
+    padding: 30 30 30 30;
     font-size: 1.5em;
     font-family: monospace;
 }
 
-.contact{
-    padding: 0 10 0 190;
+/* .contact */
+.space{ 
+    padding: 0 10 0 30;
 }
 
 .td{
@@ -203,7 +203,7 @@ h1{
 }
 
 .b-paragraph{
-    text-align: left;
+    text-align: center;
     font-family: cursive;
 }
 
@@ -257,4 +257,10 @@ h1{
 
 img{
     border-radius: 64px;
+    max-width: 500%;
+    max-height: 500%;
+}
+
+.container{
+    padding: 10% 5%;
 }
